[gd_scene load_steps=5 format=3 uid="uid://c1q5w6e7r2t8"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://beivp6q4k8r2y" path="res://scenes/InventoryUI.tscn" id="2_inv"]

[sub_resource type="TileSet" id="TileSet_1"]
tile_shape = 1
tile_layout = 0
tile_size = Vector2i(128, 64)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.07, 0.1, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1")
format = 2

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[node name="PlacementPreview" type="Node2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("2_inv")]
visible = false

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BuyFreezer" type="Button" parent="CanvasLayer/UI/Panel/HBoxContainer"]
layout_mode = 2
text = "Buy Freezer ($1000)"

[node name="Stats" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 46.0
text = "Funds: $5000"

[connection signal="pressed" from="CanvasLayer/UI/Panel/HBoxContainer/BuyFreezer" to="." method="_on_buy_freezer_pressed"]
